--- a/compose.yaml
+++ b/compose.yaml
@@ -56,6 +56,8 @@ services:
       dockerfile: frontend.dockerfile
     ports:
       - 3000:3000
+    environment:
+      - API_URL=http://backend:5000
     depends_on:
       - backend
     networks:
