--- a/nginx.conf
+++ b/nginx.conf
@@ -18,4 +18,20 @@ server {
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
+
+    location /pgadmin/ {
+        proxy_pass http://pgadmin:5050/;
+        proxy_http_version 1.1;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+
+        # Helps pgAdmin work correctly when served under /pgadmin
+        proxy_set_header X-Script-Name /pgadmin;
+        proxy_redirect off;
+    }
 }
