--- a/compose.yaml
+++ b/compose.yaml
@@ -66,6 +66,7 @@ services:
   nginx:
     container_name: nginx
     image: nginx:1.29.3-alpine3.22
+    restart: always
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     ports:
@@ -77,7 +78,7 @@ services:
       - appnet
 
 volumes:
-  pgdata: {}
+  pgdata: { }
 
 networks:
   appnet:
